--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
+import Greeting from '../components/Greeting';
 const allPosts = await Astro.glob('./posts/*.md');
 const pageTitle = "My Astro Learning Blog";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
   { allPosts.map( (post) => 
     <li><a href={post.url}>{post.frontmatter.title}</a></li>) 
     }
